compiler-core/src/parse/snapshots/gleam_core__parse__tests__case_clause_no_subject.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    case 1 {\n      -> 1\n      _ -> 2\n    }\n}\n"
---
----- SOURCE CODE

fn main() {
    case 1 {
      -> 1
      _ -> 2
    }
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:4:7
  │
4 │       -> 1
  │       ^^ I was not expecting this

Found `->`, expected one of: 
- `}`
- a case clause
